# grasping_ur5

./: CMakeLists.txt  README.md  package.xml
launch/: execute.launch
project1/: README.md
project1/src/: solution.py
src/: pick_and_place.py
